--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "backup.js",
   "dependencies": {
     "fs": "^0.0.2",
+    "underscore": "1.8.3",
     "nodemailer": "^2.5.0",
     "npm": "^3.10.5"
   },
@@ -25,6 +26,6 @@
   "dependencies": {
     "underscore": "*",
     "nodemailer":"*",
-    "aws-sdk":"*"
+    "aws-sdk":"*",
   }
 }
